fix: container collapsing due to uploadthing

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -64,6 +64,13 @@
 @media (max-width: 640px) {
   .container {
     @apply px-4;
+    max-width: 1536px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 1536px;
   }
 }
 
